seaqt/QtWidgets/gen_qmenubar.h

class QAction;
class QIcon;
class QMenu;
class QMenuBar;
class QMetaObject;
class QPoint;
class QRect;
class QSize;
class QWidget;
typedef struct QAction QAction;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMenu QMenu;
typedef struct QMenuBar QMenuBar;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QMenuBar_override_virtual_showEvent(void* self, intptr_t slot);
void QMenuBar_virtualbase_showEvent(void* self, QShowEvent* event);
bool QMenuBar_override_virtual_hideEvent(void* self, intptr_t slot);
void QMenuBar_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QMenuBar_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QMenuBar_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QMenuBar_override_virtual_metric(void* self, intptr_t slot);
int QMenuBar_virtualbase_metric(const void* self, int param1);
bool QMenuBar_override_virtual_initPainter(void* self, intptr_t slot);
void QMenuBar_virtualbase_initPainter(const void* self, QPainter* painter);
bool QMenuBar_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QMenuBar_virtualbase_redirected(const void* self, QPoint* offset);
bool QMenuBar_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QMenuBar_virtualbase_sharedPainter(const void* self);
bool QMenuBar_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QMenuBar_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QMenuBar_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QMenuBar_virtualbase_inputMethodQuery(const void* self, int param1);
bool QMenuBar_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QMenuBar_virtualbase_focusNextPrevChild(void* self, bool next);
bool QMenuBar_override_virtual_childEvent(void* self, intptr_t slot);
void QMenuBar_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMenuBar_override_virtual_customEvent(void* self, intptr_t slot);
void QMenuBar_virtualbase_customEvent(void* self, QEvent* event);
bool QMenuBar_override_virtual_connectNotify(void* self, intptr_t slot);
void QMenuBar_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMenuBar_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMenuBar_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QMenuBar_delete(QMenuBar* self);