seaqt/QtWidgets/gen_qmenubar.nim

proc fQMenuBar_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_showEvent".}
proc fcQMenuBar_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_showEvent".}
proc fQMenuBar_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_hideEvent".}
proc fcQMenuBar_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_hideEvent".}
proc fQMenuBar_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QMenuBar_virtualbase_nativeEvent".}
proc fcQMenuBar_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_nativeEvent".}
proc fQMenuBar_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QMenuBar_virtualbase_metric".}
proc fcQMenuBar_override_virtual_metric(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_metric".}
proc fQMenuBar_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QMenuBar_virtualbase_initPainter".}
proc fcQMenuBar_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_initPainter".}
proc fQMenuBar_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QMenuBar_virtualbase_redirected".}
proc fcQMenuBar_override_virtual_redirected(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_redirected".}
proc fQMenuBar_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QMenuBar_virtualbase_sharedPainter".}
proc fcQMenuBar_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_sharedPainter".}
proc fQMenuBar_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QMenuBar_virtualbase_inputMethodEvent".}
proc fcQMenuBar_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_inputMethodEvent".}
proc fQMenuBar_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QMenuBar_virtualbase_inputMethodQuery".}
proc fcQMenuBar_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_inputMethodQuery".}
proc fQMenuBar_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QMenuBar_virtualbase_focusNextPrevChild".}
proc fcQMenuBar_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_focusNextPrevChild".}
proc fQMenuBar_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_childEvent".}
proc fcQMenuBar_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_childEvent".}
proc fQMenuBar_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMenuBar_virtualbase_customEvent".}
proc fcQMenuBar_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_customEvent".}
proc fQMenuBar_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMenuBar_virtualbase_connectNotify".}
proc fcQMenuBar_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_connectNotify".}
proc fQMenuBar_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMenuBar_virtualbase_disconnectNotify".}
proc fcQMenuBar_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMenuBar_override_virtual_disconnectNotify".}
proc fcQMenuBar_delete(self: pointer) {.importc: "QMenuBar_delete".}


func init*(T: type gen_qmenubar_types.QMenuBar, h: ptr cQMenuBar): gen_qmenubar_types.QMenuBar =
  T(h: h)
proc create*(T: type gen_qmenubar_types.QMenuBar, parent: gen_qwidget_types.QWidget): gen_qmenubar_types.QMenuBar =
  gen_qmenubar_types.QMenuBar.init(fcQMenuBar_new(parent.h))

proc create*(T: type gen_qmenubar_types.QMenuBar, ): gen_qmenubar_types.QMenuBar =
  gen_qmenubar_types.QMenuBar.init(fcQMenuBar_new2())

proc metaObject*(self: gen_qmenubar_types.QMenuBar, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMenuBar_metaObject(self.h))

proc metacast*(self: gen_qmenubar_types.QMenuBar, param1: cstring): pointer =
  fcQMenuBar_metacast(self.h, param1)

proc tr*(_: type gen_qmenubar_types.QMenuBar, s: cstring): string =
  let v_ms = fcQMenuBar_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addMenu*(self: gen_qmenubar_types.QMenuBar, menu: gen_qmenu_types.QMenu): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_addMenu(self.h, menu.h))

proc addMenu*(self: gen_qmenubar_types.QMenuBar, title: string): gen_qmenu_types.QMenu =
  gen_qmenu_types.QMenu(h: fcQMenuBar_addMenuWithTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title)))))

proc addMenu*(self: gen_qmenubar_types.QMenuBar, icon: gen_qicon_types.QIcon, title: string): gen_qmenu_types.QMenu =
  gen_qmenu_types.QMenu(h: fcQMenuBar_addMenu2(self.h, icon.h, struct_miqt_string(data: title, len: csize_t(len(title)))))

proc addSeparator*(self: gen_qmenubar_types.QMenuBar, ): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_addSeparator(self.h))

proc insertSeparator*(self: gen_qmenubar_types.QMenuBar, before: gen_qaction_types.QAction): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_insertSeparator(self.h, before.h))

proc insertMenu*(self: gen_qmenubar_types.QMenuBar, before: gen_qaction_types.QAction, menu: gen_qmenu_types.QMenu): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_insertMenu(self.h, before.h, menu.h))

proc clear*(self: gen_qmenubar_types.QMenuBar, ): void =
  fcQMenuBar_clear(self.h)

proc activeAction*(self: gen_qmenubar_types.QMenuBar, ): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_activeAction(self.h))

proc setActiveAction*(self: gen_qmenubar_types.QMenuBar, action: gen_qaction_types.QAction): void =
  fcQMenuBar_setActiveAction(self.h, action.h)

proc setDefaultUp*(self: gen_qmenubar_types.QMenuBar, defaultUp: bool): void =
  fcQMenuBar_setDefaultUp(self.h, defaultUp)

proc isDefaultUp*(self: gen_qmenubar_types.QMenuBar, ): bool =
  fcQMenuBar_isDefaultUp(self.h)

proc sizeHint*(self: gen_qmenubar_types.QMenuBar, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQMenuBar_sizeHint(self.h))

proc minimumSizeHint*(self: gen_qmenubar_types.QMenuBar, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQMenuBar_minimumSizeHint(self.h))

proc heightForWidth*(self: gen_qmenubar_types.QMenuBar, param1: cint): cint =
  fcQMenuBar_heightForWidth(self.h, param1)

proc actionGeometry*(self: gen_qmenubar_types.QMenuBar, param1: gen_qaction_types.QAction): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQMenuBar_actionGeometry(self.h, param1.h))

proc actionAt*(self: gen_qmenubar_types.QMenuBar, param1: gen_qpoint_types.QPoint): gen_qaction_types.QAction =
  gen_qaction_types.QAction(h: fcQMenuBar_actionAt(self.h, param1.h))

proc setCornerWidget*(self: gen_qmenubar_types.QMenuBar, w: gen_qwidget_types.QWidget): void =
  fcQMenuBar_setCornerWidget(self.h, w.h)

proc cornerWidget*(self: gen_qmenubar_types.QMenuBar, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQMenuBar_cornerWidget(self.h))

proc isNativeMenuBar*(self: gen_qmenubar_types.QMenuBar, ): bool =
  fcQMenuBar_isNativeMenuBar(self.h)

proc setNativeMenuBar*(self: gen_qmenubar_types.QMenuBar, nativeMenuBar: bool): void =
  fcQMenuBar_setNativeMenuBar(self.h, nativeMenuBar)

proc setVisible*(self: gen_qmenubar_types.QMenuBar, visible: bool): void =
  fcQMenuBar_setVisible(self.h, visible)

proc triggered*(self: gen_qmenubar_types.QMenuBar, action: gen_qaction_types.QAction): void =
  fcQMenuBar_triggered(self.h, action.h)

type QMenuBartriggeredSlot* = proc(action: gen_qaction_types.QAction)
proc miqt_exec_callback_QMenuBar_triggered(slot: int, action: pointer) {.exportc.} =
  let nimfunc = cast[ptr QMenuBartriggeredSlot](cast[pointer](slot))
  let slotval1 = gen_qaction_types.QAction(h: action)

  nimfunc[](slotval1)

proc ontriggered*(self: gen_qmenubar_types.QMenuBar, slot: QMenuBartriggeredSlot) =
  var tmp = new QMenuBartriggeredSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQMenuBar_connect_triggered(self.h, cast[int](addr tmp[]))

proc hovered*(self: gen_qmenubar_types.QMenuBar, action: gen_qaction_types.QAction): void =
  fcQMenuBar_hovered(self.h, action.h)

type QMenuBarhoveredSlot* = proc(action: gen_qaction_types.QAction)
proc miqt_exec_callback_QMenuBar_hovered(slot: int, action: pointer) {.exportc.} =
  let nimfunc = cast[ptr QMenuBarhoveredSlot](cast[pointer](slot))
  let slotval1 = gen_qaction_types.QAction(h: action)

  nimfunc[](slotval1)

proc onhovered*(self: gen_qmenubar_types.QMenuBar, slot: QMenuBarhoveredSlot) =
  var tmp = new QMenuBarhoveredSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQMenuBar_connect_hovered(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qmenubar_types.QMenuBar, s: cstring, c: cstring): string =
  let v_ms = fcQMenuBar_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qmenubar_types.QMenuBar, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQMenuBar_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCornerWidget*(self: gen_qmenubar_types.QMenuBar, w: gen_qwidget_types.QWidget, corner: cint): void =
  fcQMenuBar_setCornerWidget2(self.h, w.h, cint(corner))

proc cornerWidget*(self: gen_qmenubar_types.QMenuBar, corner: cint): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQMenuBar_cornerWidget1(self.h, cint(corner)))

proc QMenuBarsizeHint*(self: gen_qmenubar_types.QMenuBar, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQMenuBar_virtualbase_sizeHint(self.h))

type QMenuBarsizeHintProc* = proc(): gen_qsize_types.QSize
proc onsizeHint*(self: gen_qmenubar_types.QMenuBar, slot: QMenuBarsizeHintProc) =
  # TODO check subclass
  var tmp = new QMenuBarsizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQMenuBar_override_virtual_sizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QMenuBar_sizeHint(self: ptr cQMenuBar, slot: int): pointer {.exportc: "miqt_exec_callback_QMenuBar_sizeHint ".} =
  var nimfunc = cast[ptr QMenuBarsizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QMenuBarminimumSizeHint*(self: gen_qmenubar_types.QMenuBar, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQMenuBar_virtualbase_minimumSizeHint(self.h))

type QMenuBarminimumSizeHintProc* = proc(): gen_qsize_types.QSize
proc onminimumSizeHint*(self: gen_qmenubar_types.QMenuBar, slot: QMenuBarminimumSizeHintProc) =
  # TODO check subclass
  var tmp = new QMenuBarminimumSizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQMenuBar_override_virtual_minimumSizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QMenuBar_minimumSizeHint(self: ptr cQMenuBar, slot: int): pointer {.exportc: "miqt_exec_callback_QMenuBar_minimumSizeHint ".} =
  var nimfunc = cast[ptr QMenuBarminimumSizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QMenuBarheightForWidth*(self: gen_qmenubar_types.QMenuBar, param1: cint): cint =
  fQMenuBar_virtualbase_heightForWidth(self.h, param1)

type QMenuBarheightForWidthProc* = proc(param1: cint): cint
proc onheightForWidth*(self: gen_qmenubar_types.QMenuBar, slot: QMenuBarheightForWidthProc) =
  # TODO check subclass
  var tmp = new QMenuBarheightForWidthProc
  tmp[] = slot
  GC_ref(tmp)
  fcQMenuBar_override_virtual_heightForWidth(self.h, cast[int](addr tmp[]))
